# pmos

./: .env.example  .gitignore  .mcp.json.example  .pm-os-common  AGENT.md  AGENT_HOW_TO.md  CLAUDE_INSTALL.md  GEMINI_ONBOARDING.md  LICENSE  MAINTENANCE.md  README.md  SETUP.md  WORKFLOWS.md  boot.ps1  config.yaml.example  create-context.ps1  generate_report.py  requirements.txt  setup.py  squad_registry.yaml.example  update-context.ps1
.claude/commands/: 4cq.md  adr.md  (+53 more)
.github/: PULL_REQUEST_TEMPLATE.md
app/: RELEASING.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
docs/: brain-1.2.md  master-sheet-guide.md  pm-os-installation-guide.md
documentation/: 01-overview.md  02-architecture.md  03-installation.md  04-workflows.md  05-brain.md  README.md  google-oauth-setup.md  pip-package.md
migration/: migrate_to_v5.py  run_all_tests.sh  smoke_test_v5.sh  test_migration.py
package/: README.md  pyproject.toml
package/.github/workflows/: ci.yml  release.yml
package/docs/: config-schema.md  entity-schema.md  installation.md  manual-brain-population.md  troubleshooting.md
package/scripts/: e2e_test.sh
package/src/pm_os/: __init__.py  cli.py  downloader.py  google_auth.py  help_topics.py
package/src/pm_os/data/: __init__.py
package/src/pm_os/wizard/: __init__.py  credential_testers.py  exceptions.py  git_utils.py  logging_config.py  orchestrator.py  ui.py  validators.py
package/src/pm_os/wizard/brain_sync/: __init__.py  base.py  confluence_sync.py  github_sync.py  google_sync.py  jira_sync.py  schema.py  slack_sync.py
package/src/pm_os/wizard/steps/: __init__.py  brain_population.py  claude_code_setup.py  common_download.py  directories.py  integrations.py  llm_provider.py  prerequisites.py  profile.py  verification.py  welcome.py
package/tests/: __init__.py  test_cli.py  test_credential_testers.py  test_e2e_install.py  test_exceptions.py  test_google_auth.py  test_integration.py  test_integration_advanced.py  test_validators.py
payload/: .gitignore  AGENT.md  AGENT_HOW_TO.md  README.md  SECURITY.md  boot.ps1  logout.ps1  read_docx.py  update-context.ps1
rules/: AI_AGENTS_GUIDE.md  USER_TEMPLATE.md
schemas/: __init__.py  base.schema.yaml  config.schema.json  domain.schema.yaml  experiment.schema.yaml  person.schema.yaml  project.schema.yaml  team.schema.yaml
scripts/: boot.ps1  boot.sh  setup.sh
templates/: .env.example  TEMPLATE_ 4CQ.md  TEMPLATE_ Mega Alliance Tribe-Level Update .md  TEMPLATE_ PRD.md  USER.md.template  config.yaml.example  push_config.yaml
tools/: __init__.py  config_loader.py  entity_validator.py  path_resolver.py
(+960 files in other folders)
